# haemeoktime

./: .gitignore  CLAUDE.md  README.md  ecosystem.config.js
backend/: .env.example  database.py  main.py  models.py  pyproject.toml  requirements.txt
backend/routers/: meals.py  profile.py  recipes.py  school_meals.py  shopping.py
backend/services/: gemini.py  openai_service.py
backend/tests/: conftest.py  test_database.py  test_gemini.py  test_meals.py  test_openai_service.py  test_profile.py  test_recipes.py  test_school_meals.py  test_shopping.py
docs/superpowers/plans/: 2026-03-22-haemeoktime-backend.md  2026-03-22-haemeoktime-frontend.md  2026-03-23-home-today-meal-display.md  2026-03-23-meal-composition-settings.md  2026-03-25-favorite-recipe-data-storage.md  2026-03-26-approval-and-main-ingredient.md
docs/superpowers/specs/: 2026-03-22-haemeoktime-poc-design.md  2026-03-23-home-today-meal-display-design.md  2026-03-23-meal-composition-settings-design.md  2026-03-25-favorite-recipe-data-storage-design.md  2026-03-26-approval-and-main-ingredient-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: client.js  meals.js  profile.js  recipeCache.js  recipes.js  schoolMeals.js  shopping.js
frontend/src/components/: BottomNav.jsx  LoadingSpinner.jsx  TagChip.jsx
frontend/src/contexts/: MealPlanContext.jsx  ProfileContext.jsx
frontend/src/pages/CombinedCooking/: CombinedCooking.jsx
frontend/src/utils/: compressImage.js
wireframe/: index.html
(+8 files in other folders)
