[project]
name = "haemeoktime-backend"
version = "0.1.0"
description = "해먹타임 - 식단 추천 앱 백엔드"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "google-genai>=1.10.0",
    "openai>=1.82.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
